# ZWinSet

./: .gitignore  Cargo.toml  LICENSE  README.md  selected_jobs.json
src/: all_jobs.rs  app.rs  cli.rs  commands.rs  error.rs  image.rs  jobs.rs  json_file.rs  lib.rs  logger.rs  main.rs  threadsafe_atomic_counter.rs  utils.rs  windows.rs
tests/: program_exist_test.rs
