[package]
name = "ZWinSet"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.31.0", features = ["serde", "persistence"]}
env_logger = "0.10"
egui_extras = "0.31.0"
serde = { version = "1.0.48", features = ["derive"], optional = true}
serde_json = "1.0.48"
log = "0.4.27"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.20.0"
base64 = "0.22.1"
image = {version = "0.24", features = ["png"]}
core_affinity = "0.8.3"
clap = { version = "4.5.53", features = ["derive"] }


[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["winnt", "winuser"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
accesskit = []
